src/objects/Survey_Response__c.object
<CustomObject>
    <description>Object created with the intent of storing surveys responses gathered from Getfeedback.</description>
    <fields>
        <fullName>Case_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Response__c</fullName>
        <label>Link to Response</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Loan_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Application</label>
        <referenceTo>Loan_Application__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Score__c</fullName>
        <label>Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Comment__c</fullName>
        <label>Survey Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Time__c</fullName>
        <label>Survey Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Name_Title__c</fullName>
        <label>Survey Name Title</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Start_Time__c</fullName>
        <label>Survey Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case_Agent__c</columns>
        <columns>Rating_Score__c</columns>
        <columns>Survey_Comment__c</columns>
        <columns>Case__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Survey_Completion_Time__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys Responses</label>
        <sharedTo>
            <role>Borrowers</role>
            <role>Case_Prep_Team_Lead</role>
            <role>Customer_Service_Team_Lead</role>
            <role>Investor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ChamindaSR</fullName>
        <columns>Case_Agent__c</columns>
        <columns>Rating_Score__c</columns>
        <columns>Survey_Comment__c</columns>
        <columns>Case__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Survey_Completion_Time__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Agent__c</field>
            <operation>contains</operation>
            <value>Marlow Green,Issa Khafaga,Victoria Russell,Louis-Dean Blackwood,Thomas Kozia</value>
        </filters>
        <label>Chaminda Surveys Responses</label>
        <sharedTo>
            <role>Borrowers</role>
            <role>Case_Prep_Team_Lead</role>
            <role>Customer_Service_Team_Lead</role>
            <role>Investor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DanielleSR</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Case_Agent__c</columns>
        <columns>Rating_Score__c</columns>
        <columns>Survey_Comment__c</columns>
        <columns>Case__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Survey_Completion_Time__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Agent__c</field>
            <operation>contains</operation>
            <value>Taiwo Situ,Ravneet Bhullar,Amanda Stevens,Romarna Shay-Josephs</value>
        </filters>
        <filters>
            <field>Case_Agent__c</field>
            <operation>contains</operation>
            <value>Samantha Tutton,Jeffrey Obuobi</value>
        </filters>
        <label>Danielle Surveys Responses</label>
        <sharedTo>
            <role>Borrowers</role>
            <role>Case_Prep_Team_Lead</role>
            <role>Customer_Service_Team_Lead</role>
            <role>Investor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MirandaSR</fullName>
        <columns>Case_Agent__c</columns>
        <columns>Rating_Score__c</columns>
        <columns>Survey_Comment__c</columns>
        <columns>Case__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Survey_Completion_Time__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Agent__c</field>
            <operation>contains</operation>
            <value>James Ling,Nana Boison,Shannon Tube,Ellie Gates,Olamide Addo</value>
        </filters>
        <label>Miranda Surveys Responses</label>
        <sharedTo>
            <role>Borrowers</role>
            <role>Case_Prep_Team_Lead</role>
            <role>Customer_Service_Team_Lead</role>
            <role>Investor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RebeccaSR</fullName>
        <columns>Case_Agent__c</columns>
        <columns>Rating_Score__c</columns>
        <columns>Survey_Comment__c</columns>
        <columns>Case__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Survey_Completion_Time__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Agent__c</field>
            <operation>contains</operation>
            <value>Stefan Aitange,Samantha Napa,Patrick Metry,Akkas Ali,Andy Opong</value>
        </filters>
        <label>Rebecca Surveys Responses</label>
        <sharedTo>
            <role>Borrowers</role>
            <role>Case_Prep_Team_Lead</role>
            <role>Customer_Service_Team_Lead</role>
            <role>Investor</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Survey Response ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>